--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -16,6 +16,26 @@
         <item>4 days</item>
         <item>5 days</item>
     </string-array>
+    <string-array name="notification_timeframe">
+        <item>1 Minute</item>
+        <item>2 Minutes</item>
+        <item>5 Minutes</item>
+        <item>10 Minutes</item>
+        <item>15 Minutes</item>
+        <item>30 Minutes</item>
+        <item>45 Minutes</item>
+        <item>60 minutes</item>
+    </string-array>
+    <string-array name="notification_timeframe_v">
+        <item>1</item>
+        <item>2</item>
+        <item>5</item>
+        <item>10</item>
+        <item>15</item>
+        <item>30</item>
+        <item>45</item>
+        <item>60</item>
+    </string-array>
     <string-array name="event_options">
         <item>Favourite Event</item>
         <item>Export To Calendar</item>
