--- a/app/src/main/res/layout/fragment_announcement.xml
+++ b/app/src/main/res/layout/fragment_announcement.xml
@@ -7,13 +7,18 @@
     <TextView android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:id="@+id/announcementTitle"
-              android:textAppearance="?android:textAppearanceMedium"
-              android:text="Announcement Title"
-              android:padding="@dimen/inner_padding"/>
+              android:textAppearance="?android:textAppearanceLarge"
+              android:singleLine="true"
+              android:text="Announcement Title"/>
+    <TextView android:layout_width="wrap_content"
+              android:layout_height="wrap_content"
+              android:textAppearance="?android:textAppearanceSmall"
+              android:text="5 hours ago"
+              android:id="@+id/announcementDate"/>
     <TextView android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:id="@+id/announcementContent"
               android:textAppearance="?android:textAppearance"
               android:text="Content"
-              android:padding="@dimen/inner_padding"/>
+              android:visibility="gone"/>
 </LinearLayout>
