--- a/app/src/main/res/layout/layout_info_group.xml
+++ b/app/src/main/res/layout/layout_info_group.xml
@@ -1,44 +1,23 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:layout_width="fill_parent"
               android:layout_height="wrap_content"
-              xmlns:app="http://schemas.android.com/apk/res-auto"
-              android:background="@android:color/background_light">
-
-    <!-- TODO: Update blank fragment layout -->
-    <android.support.v7.widget.CardView
+              android:orientation="vertical"
+              android:background="@android:color/background_light"
+              android:id="@+id/layout">
+    <TextView
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            app:cardElevation="@dimen/cardview_default_elevation">
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:text="Large Text"
+            android:id="@+id/title"
+            style="@style/AppTheme.Header"/>
 
-        <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="vertical">
-
-            <ImageView
-                    android:layout_width="match_parent"
-                    android:layout_height="@dimen/image_height"
-                    android:id="@+id/image"
-                    android:src="@drawable/placeholder_event"
-                    android:contentDescription="Info image" android:scaleType="centerCrop"/>
-
-            <TextView
-                    android:layout_margin="4dp"
-                    android:layout_width="fill_parent"
-                    android:layout_height="wrap_content"
-                    android:textAppearance="?android:attr/textAppearanceLarge"
-                    android:text="Large Text"
-                    android:id="@+id/title"
-                    style="@style/AppTheme.Header"/>
-
-            <TextView
-                    android:layout_margin="6dp"
-                    android:layout_width="fill_parent"
-                    android:layout_height="wrap_content"
-                    android:text="Large Text"
-                    android:id="@+id/description"
-                    style="@style/AppTheme.Header.Sub"/>
-        </LinearLayout>
-    </android.support.v7.widget.CardView>
+    <TextView
+            android:padding="@dimen/inner_padding"
+            android:background="@color/primaryLight"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:textAppearanceSmallInverse"
+            android:text="Large Text"
+            android:id="@+id/description"/>
 </LinearLayout>
