--- a/app/src/main/res/layout/layout_info_group_item.xml
+++ b/app/src/main/res/layout/layout_info_group_item.xml
@@ -1,28 +1,13 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:layout_width="fill_parent"
+              android:layout_width="match_parent"
               android:layout_height="wrap_content"
-              xmlns:app="http://schemas.android.com/apk/res-auto"
-              android:background="@android:color/background_light">
-
-    <!-- TODO: Update blank fragment layout -->
-    <android.support.v7.widget.CardView
-            android:layout_width="fill_parent"
+              android:background="@android:color/background_light"
+android:id="@+id/layout">
+    <TextView
+            android:padding="@dimen/outer_padding"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_margin="4dp"
-            app:cardUseCompatPadding="true"
-            app:cardElevation="@dimen/cardview_default_elevation"
-            app:cardCornerRadius="@dimen/cardview_default_radius"
-            android:background="@color/primary"
-            android:id="@+id/layout">
-
-        <TextView
-                android:layout_margin="4dp"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textAppearance="?android:attr/textAppearanceLarge"
-                android:text="Large Text"
-                android:id="@+id/title"
-                android:textColor="#000000"/>
-    </android.support.v7.widget.CardView>
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:text="Large Text"
+            android:id="@+id/title"/>
 </LinearLayout>
