Now showing images on info views!
Also updated api client to latest version

--- a/app/src/main/res/layout/fview_info.xml
+++ b/app/src/main/res/layout/fview_info.xml
@@ -12,8 +12,7 @@
             app:layout_behavior="@string/appbar_scrolling_view_behavior"
             tools:context="org.eurofurence.connavigator.ui.FragmentViewInfo"
             android:id="@+id/eventActivityLayout"
-            android:clickable="true"
-    >
+            android:clickable="true">
 
         <ImageView
                 android:layout_width="match_parent"
