--- a/app/src/main/res/layout/layout_info_group.xml
+++ b/app/src/main/res/layout/layout_info_group.xml
@@ -4,6 +4,11 @@
               android:orientation="vertical"
               android:background="@android:color/background_light"
               android:id="@+id/layout">
+    <ImageView android:layout_width="match_parent"
+               android:layout_height="200dp"
+               android:id="@+id/image"
+               android:src="@drawable/placeholder_event"
+    android:scaleType="fitCenter"/>
     <TextView
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
