--- a/app/src/main/res/layout/fview_info.xml
+++ b/app/src/main/res/layout/fview_info.xml
@@ -4,14 +4,10 @@
             android:background="@android:color/background_light">
     <LinearLayout
             xmlns:android="http://schemas.android.com/apk/res/android"
-            xmlns:tools="http://schemas.android.com/tools"
-            xmlns:app="http://schemas.android.com/apk/res-auto"
             android:orientation="vertical"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            app:layout_behavior="@string/appbar_scrolling_view_behavior"
-            tools:context="org.eurofurence.connavigator.ui.FragmentViewInfo"
-            android:id="@+id/eventActivityLayout"
+            android:layout_height="wrap_content"
+            android:id="@+id/layout"
             android:clickable="true">
 
         <ImageView
