Now with a toggleable search mode in dealers

--- a/app/src/main/res/layout/fview_dealer.xml
+++ b/app/src/main/res/layout/fview_dealer.xml
@@ -67,6 +67,9 @@
             <us.feras.mdv.MarkdownView android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:id="@+id/dealerArtDescription"/>
+            <ImageView android:layout_width="match_parent"
+                       android:layout_height="200dp"
+                        android:id="@+id/dealerMap"/>
 
         </LinearLayout>
     </ScrollView>
