--- a/app/src/main/res/menu/activity_root.xml
+++ b/app/src/main/res/menu/activity_root.xml
@@ -1,14 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
       xmlns:app="http://schemas.android.com/apk/res-auto">
-    <item android:id="@+id/action_settings"
-          android:title="@string/action_settings"
-          android:orderInCategory="100"
-          app:showAsAction="never"/>
-    <item android:id="@+id/action_bug_report"
-          android:title="Report Bug"
-          android:orderInCategory="200"/>
-    <item android:id="@+id/action_feedback_report"
-          android:title="Feedback"
-          android:orderInCategory="300"/>
+    <group>
+        <item android:id="@+id/action_settings"
+              android:title="@string/action_settings"
+              android:orderInCategory="100"
+              app:showAsAction="never"/>
+        <item android:id="@+id/action_bug_report"
+              android:title="Report Bug"
+              android:orderInCategory="200"/>
+        <item android:id="@+id/action_feedback_report"
+              android:title="Feedback"
+              android:orderInCategory="300"/>
+    </group>
+    <item android:id="@+id/action_search"
+          android:title="Search"
+          app:showAsAction="ifRoom"
+          android:visible="false"
+          android:icon="@android:drawable/ic_menu_search"/>
 </menu>
