--- a/app/src/main/res/menu/activity_root.xml
+++ b/app/src/main/res/menu/activity_root.xml
@@ -17,5 +17,10 @@
           android:title="Search"
           app:showAsAction="ifRoom"
           android:visible="false"
-          android:icon="@android:drawable/ic_menu_search"/>
+          android:icon="@drawable/icon_search"/>
+    <item android:id="@+id/action_filter"
+          android:title="Filter"
+          app:showAsAction="ifRoom"
+          android:icon="@drawable/icon_filter"
+          android:visible="false"/>
 </menu>
