--- a/app/src/main/res/layout/fragment_announcement.xml
+++ b/app/src/main/res/layout/fragment_announcement.xml
@@ -4,21 +4,36 @@
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:padding="@dimen/outer_padding">
-    <TextView android:layout_width="match_parent"
-              android:layout_height="wrap_content"
-              android:id="@+id/announcementTitle"
-              android:textAppearance="?android:textAppearanceLarge"
-              android:singleLine="true"
-              android:text="Announcement Title"/>
+    <LinearLayout android:layout_width="match_parent"
+                  android:layout_height="wrap_content"
+                  android:orientation="horizontal"
+                  android:weightSum="10">
+        <TextView android:layout_width="wrap_content"
+                  android:layout_height="wrap_content"
+                  android:id="@+id/announcementTitle"
+                  android:textAppearance="?android:textAppearanceLarge"
+                  android:singleLine="true"
+                  android:layout_weight="9"
+                  android:text="Announcement Title"/>
+        <ImageView android:layout_width="20dp"
+                   android:layout_height="20dp"
+                   android:scaleType="fitCenter"
+                   android:layout_weight="1"
+                   android:id="@+id/announcementCaret"
+                   android:src="@drawable/icon_expand"/>
+    </LinearLayout>
+
     <TextView android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:textAppearance="?android:textAppearanceSmall"
               android:text="5 hours ago"
+              android:layout_below="@id/announcementTitle"
               android:id="@+id/announcementDate"/>
     <TextView android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:id="@+id/announcementContent"
               android:textAppearance="?android:textAppearance"
               android:text="Content"
+              android:layout_below="@id/announcementDate"
               android:visibility="gone"/>
 </LinearLayout>
