Re-added the option to clear the database. It will now exit the application to make sure that there's no possible issues with people having empty databases they can't reload

--- a/app/src/main/res/menu/activity_root_drawer.xml
+++ b/app/src/main/res/menu/activity_root_drawer.xml
@@ -45,6 +45,9 @@
             <item android:id="@+id/navDevReload"
                   android:title="Reload database"
                   android:icon="@drawable/icon_refresh"/>
+            <item android:id="@+id/navDevClear"
+                  android:title="Empty database"
+                  android:icon="@drawable/icon_delete" />
             <item android:id="@+id/navDevSettings"
                   android:title="Settings"
                   android:icon="@drawable/icon_settings" />
