Added dialog to clearing database to inform users

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -37,4 +37,7 @@
         <item name="android:background">@color/accentDark</item>
         <item name="android:textColor">@color/textBlack</item>
     </style>
+    <style name="appcompatDialog" parent="Theme.AppCompat.Dialog">
+        <item name="android:windowNoTitle">true</item>
+    </style>
 </resources>
