--- a/app/src/main/res/layout/fragment_announcement.xml
+++ b/app/src/main/res/layout/fragment_announcement.xml
@@ -3,12 +3,13 @@
               android:orientation="vertical"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
-              android:padding="@dimen/outer_padding">
+              android:padding="@dimen/outer_padding"
+              android:animateLayoutChanges="true">
     <LinearLayout android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:orientation="horizontal"
                   android:weightSum="10">
-        <TextView android:layout_width="wrap_content"
+        <TextView android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:id="@+id/announcementTitle"
                   android:textAppearance="?android:textAppearanceLarge"
@@ -20,6 +21,7 @@
                    android:scaleType="fitCenter"
                    android:layout_weight="1"
                    android:id="@+id/announcementCaret"
+                   android:textAlignment="viewEnd"
                    android:src="@drawable/icon_expand"/>
     </LinearLayout>
 
