--- a/app/src/main/res/layout/fview_about.xml
+++ b/app/src/main/res/layout/fview_about.xml
@@ -4,7 +4,8 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
     <ScrollView android:layout_width="match_parent"
-    android:layout_height="match_parent">
+                android:layout_height="match_parent"
+                android:background="@color/cardview_light_background">
         <LinearLayout
                 android:orientation="vertical"
                 android:layout_width="match_parent"
@@ -14,15 +15,13 @@
                     android:layout_height="wrap_content"
                     android:textAppearance="?android:attr/textAppearanceLarge"
                     android:text="Developed by"
-                    android:id="@+id/textView2" android:layout_alignParentTop="true"
-                    android:layout_alignParentLeft="true"
-                    android:layout_alignParentStart="true" style="@style/AppTheme.Header"/>
+                    android:id="@+id/textView2"
+                    style="@style/AppTheme.Header"/>
 
             <LinearLayout android:layout_width="match_parent"
                           android:layout_height="wrap_content"
                           android:weightSum="10"
-                          android:orientation="horizontal"
-                          android:background="@color/cardview_light_background">
+                          android:orientation="horizontal">
                 <ImageView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
