--- a/app/src/main/res/layout/activity_start.xml
+++ b/app/src/main/res/layout/activity_start.xml
@@ -1,26 +1,35 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+        android:layout_height="match_parent"
+        android:layout_width="match_parent"
+        android:background="@color/primary"
+        xmlns:android="http://schemas.android.com/apk/res/android">
+    <ScrollView android:layout_height="match_parent"
+                android:layout_width="match_parent">
+        <RelativeLayout
                 android:orientation="vertical"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:background="@color/primary">
+                android:layout_height="match_parent">
 
-    <ImageView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/imageView" android:layout_centerVertical="false" android:layout_centerHorizontal="true"
-            android:src="@drawable/logo"/>
-    <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Get Started"
-            android:id="@+id/buttonStart"
-            android:visibility="invisible" android:layout_below="@+id/textHelp"
-            android:layout_centerHorizontal="true"/>
-    <TextView
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:text="We&apos;re just loading some data for you. Hang tight!"
-            android:id="@+id/textHelp" android:layout_below="@+id/imageView" android:layout_centerHorizontal="true"
-            style="@style/AppTheme.Header.Sub" android:gravity="center_horizontal"/>
-</RelativeLayout>
+            <ImageView
+                    android:layout_width="match_parent"
+                    android:layout_height="300dp"
+                    android:id="@+id/imageView" android:layout_centerVertical="false"
+                    android:layout_centerHorizontal="true"
+                    android:src="@drawable/logo"/>
+            <Button
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Get Started"
+                    android:id="@+id/buttonStart"
+                    android:visibility="invisible" android:layout_below="@+id/textHelp"
+                    android:layout_centerHorizontal="true"/>
+            <TextView
+                    android:layout_width="fill_parent"
+                    android:layout_height="wrap_content"
+                    android:text="We&apos;re just loading some data for you. Hang tight!"
+                    android:id="@+id/textHelp" android:layout_below="@+id/imageView"
+                    android:layout_centerHorizontal="true"
+                    style="@style/AppTheme.Header.Sub" android:gravity="center_horizontal"/>
+        </RelativeLayout>
+    </ScrollView>
