Fixed a bug where you would crash if you loaded about from the home screen

--- a/app/src/main/res/layout/activity_start.xml
+++ b/app/src/main/res/layout/activity_start.xml
@@ -33,3 +33,4 @@
                     style="@style/AppTheme.Header.Sub" android:gravity="center_horizontal"/>
         </RelativeLayout>
     </ScrollView>
+</LinearLayout>
