The Info view now works with the Wiki syntax and displays like it should.

--- a/app/src/main/res/layout/fview_info.xml
+++ b/app/src/main/res/layout/fview_info.xml
@@ -28,10 +28,11 @@
                 style="@style/AppTheme.Header"
                 android:id="@+id/title"/>
 
-        <us.feras.mdv.MarkdownView
+        <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:id="@+id/text"
+                android:textAppearance="?android:textAppearance"
                 android:layout_margin="@dimen/outer_padding"/>
     </LinearLayout>
 </ScrollView>
