--- a/app/src/main/res/layout/fview_dealer.xml
+++ b/app/src/main/res/layout/fview_dealer.xml
@@ -74,6 +74,7 @@
                                        android:id="@+id/dealerArtDescription"/>
             <ImageView android:layout_width="match_parent"
                        android:layout_height="200dp"
+                       android:scaleType="fitCenter"
                        android:id="@+id/dealerMap"/>
 
         </LinearLayout>
