--- a/app/src/main/res/layout/fview_events_viewpager.xml
+++ b/app/src/main/res/layout/fview_events_viewpager.xml
@@ -17,13 +17,15 @@
                       android:layout_height="match_parent"
                       android:orientation="vertical"
                       android:visibility="gone"
-        android:id="@+id/searchLayout">
+                      android:id="@+id/searchLayout">
             <EditText android:layout_width="match_parent"
                       android:layout_height="wrap_content"
-                      android:id="@+id/eventSearchBar"/>
+                      android:id="@+id/eventSearchBar"
+                      android:padding="@dimen/outer_padding"
+                      android:background="@color/cardview_light_background"/>
             <AbsoluteLayout android:layout_width="match_parent"
                             android:layout_height="match_parent"
-                            android:id="@+id/eventSearch" />
+                            android:id="@+id/eventSearch"/>
         </LinearLayout>
     </ScrollView>
 </LinearLayout>
