Upgraded searching and event loading to now have loading indicators

--- a/app/src/main/res/layout/fragment_events.xml
+++ b/app/src/main/res/layout/fragment_events.xml
@@ -8,6 +8,10 @@
               android:textAppearance="?android:textAppearanceLarge"
               android:padding="@dimen/outer_padding"
               android:id="@+id/eventsTitle"/>
+    <ProgressBar android:layout_width="match_parent"
+                 android:layout_height="wrap_content"
+                 android:indeterminate="true"
+                 android:id="@+id/progress"/>
     <android.support.v7.widget.RecyclerView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
