Added support for remote configs

--- a/app/src/main/res/menu/nav_drawer.xml
+++ b/app/src/main/res/menu/nav_drawer.xml
@@ -30,8 +30,7 @@
         <item
                 android:id="@+id/navMap"
                 android:icon="@drawable/icon_map_world"
-                android:title="Points of Interest"
-                android:visible="false"/>
+                android:title="Points of Interest"/>
     </group>
 
     <item android:title="External">
