Moved rotation to remote configs

--- a/app/src/main/res/xml/remote.xml
+++ b/app/src/main/res/xml/remote.xml
@@ -8,4 +8,8 @@
         <key>maps_enabled</key>
         <value>false</value>
     </entry>
+    <entry>
+        <key>rotation_enabled</key>
+        <value>false</value>
+    </entry>
 </defaultsMap>
