Zooming on images

--- a/app/src/main/res/layout/activity_root.xml
+++ b/app/src/main/res/layout/activity_root.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!-- Layout root of the app, use a pullable drawer -->
-<android.support.v4.widget.DrawerLayout
+<org.eurofurence.connavigator.ui.views.HackyDrawerLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:tools="http://schemas.android.com/tools"
@@ -76,4 +76,4 @@
             android:fitsSystemWindows="true"
             app:headerLayout="@layout/layout_nav_header"
             app:menu="@menu/nav_drawer"/>
-</android.support.v4.widget.DrawerLayout>
+</org.eurofurence.connavigator.ui.views.HackyDrawerLayout>
