--- a/app/src/main/res/layout/fview_event.xml
+++ b/app/src/main/res/layout/fview_event.xml
@@ -19,7 +19,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
 
-            <ImageView
+            <uk.co.senab.photoview.PhotoView
                     android:layout_width="match_parent"
                     android:layout_height="200dp"
                     android:id="@+id/image"
