--- a/app/src/main/res/layout/fview_about.xml
+++ b/app/src/main/res/layout/fview_about.xml
@@ -21,7 +21,8 @@
             <LinearLayout android:layout_width="match_parent"
                           android:layout_height="wrap_content"
                           android:weightSum="10"
-                          android:orientation="horizontal">
+                          android:orientation="horizontal"
+                          android:id="@+id/aboutPazuzu">
                 <ImageView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
@@ -40,7 +41,8 @@
             <LinearLayout android:layout_width="match_parent"
                           android:layout_height="wrap_content"
                           android:weightSum="10"
-                          android:orientation="horizontal">
+                          android:orientation="horizontal"
+                          android:id="@+id/aboutRequinard">
                 <ImageView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
