--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -9,7 +9,6 @@
         <item name="android:colorForeground">@color/textBlack</item>
     </style>
 
-
     <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar"/>
     <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light"/>
 
@@ -40,4 +39,13 @@
     <style name="appcompatDialog" parent="Theme.AppCompat.Dialog">
         <item name="android:windowNoTitle">true</item>
     </style>
+
+    <style name="RequinardTheme" parent="Theme.AppCompat.Light.NoActionBar">
+        <!-- Customize your theme here. -->
+        <item name="colorPrimary">#656565</item>
+        <item name="colorPrimaryDark">#262626</item>
+        <item name="colorAccent">#FFFe00</item>
+        <item name="android:colorForeground">@color/textBlack</item>
+    </style>
+
 </resources>
