Added glyphs for favourited events Added glyphs and colours for conflicting events Moved these to remote config Moved dealer map cropping settings to remote config

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -13,4 +13,5 @@
     <color name="textWhite">#dcdcdc</color>
     <color name="textBlack">#111</color>
     <color name="backgroundGrey">#DDD</color>
+    <color name="alert">#FFE082</color>
 </resources>
