--- a/app/src/main/res/xml/remote.xml
+++ b/app/src/main/res/xml/remote.xml
@@ -12,4 +12,22 @@
         <key>rotation_enabled</key>
         <value>false</value>
     </entry>
+    <entry>
+        <key>show_conflicting_events</key>
+        <value>false</value>
+    </entry>
+    <entry>
+        <key>show_event_glyphs</key>
+        <value>
+            <false></false>
+        </value>
+    </entry>
+    <entry>
+        <key>dealer_map_width</key>
+        <value>500</value>
+    </entry>
+    <entry>
+        <key>dealer_map_height</key>
+        <value>250</value>
+    </entry>
 </defaultsMap>
