--- a/app/src/main/res/xml/remote.xml
+++ b/app/src/main/res/xml/remote.xml
@@ -19,15 +19,15 @@
     <entry>
         <key>show_event_glyphs</key>
         <value>
-            <false></false>
+            <false>false</false>
         </value>
     </entry>
     <entry>
         <key>dealer_map_width</key>
-        <value>500</value>
+        <value>750</value>
     </entry>
     <entry>
         <key>dealer_map_height</key>
-        <value>250</value>
+        <value>400</value>
     </entry>
 </defaultsMap>
