--- a/app/src/main/res/layout/fview_event.xml
+++ b/app/src/main/res/layout/fview_event.xml
@@ -82,7 +82,7 @@
     <android.support.design.widget.FloatingActionButton android:layout_width="wrap_content"
                                                         android:layout_height="wrap_content"
                                                         android:layout_margin="16dp"
-                                                        android:src="@drawable/icon_like_empty"
+                                                        android:src="@drawable/icon_menu"
                                                         android:clickable="true"
                                                         app:layout_anchor="@id/splitter"
                                                         app:layout_anchorGravity="bottom|right|end"
