--- a/app/src/main/res/layout/fragment_map.xml
+++ b/app/src/main/res/layout/fragment_map.xml
@@ -2,6 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:orientation="vertical"
               android:layout_width="match_parent"
+              android:background="@color/cardview_dark_background"
               android:layout_height="match_parent">
     <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
               android:padding="@dimen/outer_padding"
@@ -9,7 +10,7 @@
               android:id="@+id/mapTitle"/>
 
     <uk.co.senab.photoview.PhotoView android:layout_width="match_parent"
-                                     android:layout_height="400dp"
-                                     android:scaleType="centerCrop"
+                                     android:layout_height="match_parent"
+                                     android:scaleType="fitCenter"
                                      android:id="@+id/mapImage"/>
 </LinearLayout>
