--- a/app/src/main/res/layout/fview_maps.xml
+++ b/app/src/main/res/layout/fview_maps.xml
@@ -4,6 +4,11 @@
               android:layout_width="match_parent"
               android:layout_height="match_parent"
               android:id="@+id/mapsLayout">
+    <android.support.v4.view.ViewPager android:layout_width="match_parent"
+                                       android:layout_height="match_parent"
+                                       android:id="@+id/mapViewPager">
+
+    </android.support.v4.view.ViewPager>
 
     <android.support.v7.widget.RecyclerView android:layout_width="match_parent"
                                             android:layout_height="wrap_content"
