Integrated hockeyapp feedback. Doesn't seem to be working on a debug device

--- a/app/src/main/res/menu/nav_drawer.xml
+++ b/app/src/main/res/menu/nav_drawer.xml
@@ -45,6 +45,9 @@
 
     <item android:title="App Management">
         <menu>
+            <item android:id="@+id/navFeedback"
+                  android:title="App Feedback"
+                  android:icon="@drawable/icon_like_filled"/>
             <item android:id="@+id/navDevReload"
                   android:title="Update"
                   android:icon="@drawable/icon_refresh"/>
