feat(events): revamp event disply
This is one hell of an update

Integrates
- Anko (view dsl)
- Kovenant (promises)
- KAndroid (extensions for kotlin)

Reworks the event filtering to be async and cross-object compatible

Reimplements event recycler UI in ANko

Reimplements events page  in Anko

--- a/app/src/main/res/values/ids.xml
+++ b/app/src/main/res/values/ids.xml
@@ -3,4 +3,6 @@
     <item name="date" type="id" />
     <item name="fragment_main_event" type="id" />
     <item name="test_title" type="id" />
+    <item name="dealerSubText" type="id"/>
+    <item name="dealerPreviewImage" type="id"/>
 </resources>
