--- a/app/src/main/res/layout/fview_home.xml
+++ b/app/src/main/res/layout/fview_home.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout android:layout_height="match_parent"
                 android:layout_width="match_parent"
-                xmlns:android="http://schemas.android.com/apk/res/android">
+                xmlns:android="http://schemas.android.com/apk/res/android"
+                xmlns:app="http://schemas.android.com/apk/res-auto">
     <ScrollView android:layout_height="match_parent"
                 android:layout_width="match_parent"
                 xmlns:android="http://schemas.android.com/apk/res/android">
@@ -10,6 +11,18 @@
                       android:orientation="vertical"
                       android:layout_width="match_parent"
                       android:layout_height="match_parent">
+            <com.github.lzyzsd.circleprogress.ArcProgress
+                    android:layout_width="match_parent"
+                    android:layout_height="400dp"
+                    app:arc_stroke_width="25dp"
+                    android:layout_margin="20dp"
+                    app:arc_suffix_text=" Days"
+                    app:arc_finished_color="@color/accent"
+                    app:arc_unfinished_color="@color/primary"
+                    app:arc_bottom_text_size="14dp"
+                    app:arc_suffix_text_size="14dp"
+                    android:id="@+id/progressBar"
+                    app:arc_bottom_text="Until next EF" />
             <TextView android:layout_width="match_parent"
                       android:layout_height="wrap_content"
                       android:text="Latest Announcements"
