feat(ui): add login activity
Adds an activity for logging in

--- a/app/src/main/res/menu/nav_drawer.xml
+++ b/app/src/main/res/menu/nav_drawer.xml
@@ -32,6 +32,12 @@
                 android:title="Points of Interest"/>
     </group>
 
+    <group android:title="Personal">
+        <item
+                android:id="@+id/navLogin"
+                android:icon="@drawable/icon_home"
+                android:title="Login"/>
+    </group>
     <item android:title="External">
         <menu>
             <item android:id="@+id/navWebSite"
