--- a/app/src/main/res/layout/layout_nav_header.xml
+++ b/app/src/main/res/layout/layout_nav_header.xml
@@ -38,14 +38,14 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:paddingTop="@dimen/nav_header_vertical_spacing"
-            android:text="Eurofurence 22"
+            android:text="Eurofurence 23"
             android:textAppearance="@style/TextAppearance.AppCompat.Body1"
             android:id="@+id/navTitle"/>
 
     <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Back to the 80s"
+            android:text="Ancient Egypt"
             android:id="@+id/navSubtitle"/>
 
 </LinearLayout>
