fix(event): show banner in ui if present

--- a/app/src/main/res/layout/fview_event.xml
+++ b/app/src/main/res/layout/fview_event.xml
@@ -21,7 +21,7 @@
 
             <com.github.chrisbanes.photoview.PhotoView
                     android:layout_width="match_parent"
-                    android:layout_height="500dp"
+                    android:layout_height="wrap_content"
                     android:id="@+id/image"
                     android:contentDescription="Event"
                     android:src="@drawable/placeholder_event"
