fix(feedback): remove feedback button from menu

--- a/app/src/main/res/menu/nav_drawer.xml
+++ b/app/src/main/res/menu/nav_drawer.xml
@@ -59,6 +59,7 @@
         <menu>
             <item android:id="@+id/navFeedback"
                   android:title="App Feedback"
+                  android:visible="false"
                   android:icon="@drawable/icon_like_filled"/>
             <item android:id="@+id/navDevReload"
                   android:title="Update"
