feat(fursuit games): add basic for the fursuit games
If you're not enabled, it'll open a web version. Otherwise you're going to native

--- a/app/src/main/res/menu/nav_drawer.xml
+++ b/app/src/main/res/menu/nav_drawer.xml
@@ -44,7 +44,7 @@
                 android:title="Private Messages" />
             <item
                 android:id="@+id/navFursuitGames"
-                android:icon="@drawable/icon_message"
+                android:icon="@drawable/icon_paw"
                 android:title="Fursuit Games" />
         </menu>
     </item>
