fix(fursuit games): rename fursuit games
closes #127

--- a/app/src/main/res/menu/nav_drawer.xml
+++ b/app/src/main/res/menu/nav_drawer.xml
@@ -45,7 +45,7 @@
             <item
                 android:id="@+id/navFursuitGames"
                 android:icon="@drawable/icon_paw"
-                android:title="Fursuit Games" />
+                android:title="Collect'Em All" />
         </menu>
     </item>
     <item android:title="External">
