feat(api): make api configurable by remote proxy

--- a/app/src/main/res/xml/remote.xml
+++ b/app/src/main/res/xml/remote.xml
@@ -24,4 +24,8 @@
         <key>native_fursuit_games</key>
         <value>false</value>
     </entry>
+    <entry>
+        <key>api_base_url</key>
+        <value>https://app.eurofurence.org/api/v2/</value>
+    </entry>
 </defaultsMap>
