chore(rename): rename private messages to personal messages

--- a/app/src/main/res/menu/nav_drawer.xml
+++ b/app/src/main/res/menu/nav_drawer.xml
@@ -41,7 +41,7 @@
             <item
                 android:id="@+id/navMessages"
                 android:icon="@drawable/icon_message"
-                android:title="Private Messages" />
+                android:title="Personal Messages" />
             <item
                 android:id="@+id/navFursuitGames"
                 android:icon="@drawable/icon_paw"
