Add observable behaviour to user status widget

--- a/app/src/main/res/xml/remote.xml
+++ b/app/src/main/res/xml/remote.xml
@@ -26,6 +26,6 @@
     </entry>
     <entry>
         <key>api_base_url</key>
-        <value>https://app.eurofurence.org/api/v2/</value>
+        <value>https://app.eurofurence.org</value>
     </entry>
 </defaultsMap>
